--- a/index.html
+++ b/index.html
@@ -2,22 +2,87 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, viewport-fit=cover"
+    />
+
+    <!-- Primary SEO -->
     <title>The Scratch Lab | Mobile Paint Correction & Scratch Removal</title>
-    <meta name="description" content="Mobile paint correction & scratch removal. We come to you in Bucks County, Philadelphia & New Jersey. Call 267-379-3167." />
+    <meta
+      name="description"
+      content="Mobile paint correction & scratch removal. We come to you in Bucks County, Philadelphia & New Jersey. Call 267-379-3167."
+    />
+
+    <!-- Open Graph -->
+    <meta property="og:type" content="website" />
     <meta property="og:title" content="The Scratch Lab | Mobile Paint Correction & Scratch Removal" />
     <meta property="og:description" content="Mobile paint correction & scratch removal. We come to you in Bucks County, Philadelphia & New Jersey. Call 267-379-3167." />
     <meta property="og:image" content="/img/work2.jpg" />
-    <meta property="og:type" content="website" />
+
+    <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="The Scratch Lab | Mobile Paint Correction & Scratch Removal" />
     <meta name="twitter:description" content="Mobile paint correction & scratch removal. We come to you in Bucks County, Philadelphia & New Jersey. Call 267-379-3167." />
     <meta name="twitter:image" content="/img/work2.jpg" />
+
+    <!-- Theme color for PWA / mobile -->
+    <meta name="theme-color" content="#0b1220" />
+
+    <!-- Icons / Favicon (uses your logo at /img/logo.png) -->
+    <link rel="icon" type="image/png" sizes="32x32" href="/img/logo.png" />
+    <link rel="icon" type="image/png" sizes="192x192" href="/img/logo.png" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/img/logo.png" />
+    <link rel="manifest" href="/site.webmanifest" />
+
+    <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
+
+    <!-- Structured Data (LocalBusiness) -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "AutoBodyShop",
+      "name": "The Scratch Lab",
+      "image": "/img/work2.jpg",
+      "telephone": "+1-267-379-3167",
+      "email": "info@leatherclinic.org",
+      "address": {
+        "@type": "PostalAddress",
+        "streetAddress": "9-4 Aspen Way",
+        "addressLocality": "Doylestown",
+        "addressRegion": "PA",
+        "postalCode": "18901",
+        "addressCountry": "US"
+      },
+      "areaServed": ["Bucks County", "Philadelphia", "New Jersey"],
+      "openingHoursSpecification": [
+        {
+          "@type": "OpeningHoursSpecification",
+          "dayOfWeek": ["Monday","Tuesday","Wednesday","Thursday","Friday"],
+          "opens": "08:00",
+          "closes": "19:00"
+        },
+        {
+          "@type": "OpeningHoursSpecification",
+          "dayOfWeek": ["Saturday"],
+          "opens": "09:00",
+          "closes": "17:00"
+        }
+      ],
+      "sameAs": [
+        "https://www.instagram.com/leather_repair_service2222",
+        "https://www.facebook.com/profile.php?id=61572483165003"
+      ]
+    }
+    </script>
   </head>
+
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
