--- a/index.html
+++ b/index.html
@@ -2,36 +2,31 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1.0, viewport-fit=cover"
-    />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
 
     <!-- Primary SEO -->
     <title>Paint Correction & Scratch Removal in Bucks County, Philadelphia & NJ | The Scratch Lab</title>
-    <meta
-      name="description"
-      content="Mobile paint correction & scratch removal. We come to you in Bucks County, Philadelphia & New Jersey. Call 267-379-3167."
-    />
+    <meta name="description" content="Mobile paint correction & scratch removal. We come to you in Bucks County, Philadelphia & New Jersey. Call 267-379-3167." />
     <meta name="keywords" content="paint correction Bucks County, scratch removal Philadelphia, automotive detailing New Jersey, mobile paint restoration, ceramic coating Doylestown, headlight restoration PA" />
 
     <!-- Open Graph -->
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="Paint Correction & Scratch Removal in Bucks County, Philadelphia & NJ | The Scratch Lab" />
-    <meta property="og:description" content="Mobile paint correction & scratch removal. We come to you in Bucks County, Philadelphia & New Jersey. Call 267-379-3167." />
-    <meta property="og:image" content="/img/work2.jpg" />
+    <meta property="og:title" content="The Scratch Lab — Mobile Paint Correction & Scratch Removal" />
+    <meta property="og:description" content="We come to you in Bucks County, Philadelphia & New Jersey. Fast estimates, premium materials." />
+    <meta property="og:image" content="/og.jpg" />
+    <meta property="og:url" content="https://scratchlab.org/" />
 
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="Paint Correction & Scratch Removal in Bucks County, Philadelphia & NJ | The Scratch Lab" />
-    <meta name="twitter:description" content="Mobile paint correction & scratch removal. We come to you in Bucks County, Philadelphia & New Jersey. Call 267-379-3167." />
-    <meta name="twitter:image" content="/img/work2.jpg" />
+    <meta name="twitter:title" content="The Scratch Lab — Mobile Paint Correction & Scratch Removal" />
+    <meta name="twitter:description" content="We come to you in Bucks County, Philadelphia & New Jersey. Fast estimates, premium materials." />
+    <meta name="twitter:image" content="/og.jpg" />
 
-    <!-- Theme color for PWA / mobile -->
+    <!-- Theme color -->
     <meta name="theme-color" content="#0b1220" />
 
-    <!-- Icons / Favicon (uses your logo at /img/logo.png) -->
-    <link rel="icon" type="image/png" sizes="32x32" href="/img/logo.png" />
+    <!-- Icons / Favicon -->
+    <link rel="icon" href="/favicon.ico" />
     <link rel="icon" type="image/png" sizes="192x192" href="/img/logo.png" />
     <link rel="apple-touch-icon" sizes="180x180" href="/img/logo.png" />
     <link rel="manifest" href="/site.webmanifest" />
@@ -39,163 +34,70 @@
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap"
-      rel="stylesheet"
-    />
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet" />
 
-    <!-- Structured Data (LocalBusiness + Service + FAQPage) -->
+    <!-- Structured Data: LocalBusiness -->
     <script type="application/ld+json">
     {
-      "@context": "https://schema.org",
-      "@type": "AutoBodyShop",
-      "name": "The Scratch Lab",
-      "description": "Mobile paint correction and scratch removal service serving Bucks County, Philadelphia, and New Jersey",
-      "image": "/img/work2.jpg",
-      "telephone": "+1-267-379-3167",
-      "email": "info@leatherclinic.org",
-      "priceRange": "$$",
-      "url": "https://thescratchlab.com",
-      "address": {
-        "@type": "PostalAddress",
-        "streetAddress": "9-4 Aspen Way",
-        "addressLocality": "Doylestown",
-        "addressRegion": "PA",
-        "postalCode": "18901",
-        "addressCountry": "US"
+      "@context":"https://schema.org",
+      "@type":"AutoBodyShop",
+      "name":"The Scratch Lab",
+      "description":"Mobile paint correction and scratch removal service serving Bucks County, Philadelphia, and New Jersey",
+      "image":"https://scratchlab.org/og.jpg",
+      "telephone":"+1-267-379-3167",
+      "email":"info@scratchlab.org",
+      "priceRange":"$$",
+      "url":"https://scratchlab.org",
+      "address":{
+        "@type":"PostalAddress",
+        "streetAddress":"9-4 Aspen Way",
+        "addressLocality":"Doylestown",
+        "addressRegion":"PA",
+        "postalCode":"18901",
+        "addressCountry":"US"
       },
-      "areaServed": [
-        {
-          "@type": "City",
-          "name": "Philadelphia",
-          "@id": "https://en.wikipedia.org/wiki/Philadelphia"
-        },
-        {
-          "@type": "AdministrativeArea",
-          "name": "Bucks County",
-          "@id": "https://en.wikipedia.org/wiki/Bucks_County,_Pennsylvania"
-        },
-        {
-          "@type": "State",
-          "name": "New Jersey"
-        }
+      "areaServed":[
+        {"@type":"City","name":"Philadelphia"},
+        {"@type":"AdministrativeArea","name":"Bucks County"},
+        {"@type":"State","name":"New Jersey"}
       ],
-      "hasOfferCatalog": {
-        "@type": "OfferCatalog",
-        "name": "Auto Paint Restoration Services",
-        "itemListElement": [
-          {
-            "@type": "Offer",
-            "itemOffered": {
-              "@type": "Service",
-              "name": "Paint Correction",
-              "description": "Multi-stage paint correction for deep gloss restoration"
-            }
-          },
-          {
-            "@type": "Offer",
-            "itemOffered": {
-              "@type": "Service",
-              "name": "Scratch Removal",
-              "description": "Professional car scratch removal and finish refinement"
-            }
-          },
-          {
-            "@type": "Offer",
-            "itemOffered": {
-              "@type": "Service",
-              "name": "Ceramic Coating",
-              "description": "Durable ceramic coating application with hydrophobic protection"
-            }
-          },
-          {
-            "@type": "Offer",
-            "itemOffered": {
-              "@type": "Service",
-              "name": "Headlight Restoration",
-              "description": "Professional headlight clarity restoration with UV seal"
-            }
-          }
+      "hasOfferCatalog":{
+        "@type":"OfferCatalog",
+        "name":"Auto Paint Restoration Services",
+        "itemListElement":[
+          {"@type":"Offer","itemOffered":{"@type":"Service","name":"Paint Correction","description":"Multi-stage paint correction for deep gloss restoration"}},
+          {"@type":"Offer","itemOffered":{"@type":"Service","name":"Scratch Removal","description":"Professional car scratch removal and finish refinement"}},
+          {"@type":"Offer","itemOffered":{"@type":"Service","name":"Ceramic Coating","description":"Durable ceramic coating application with hydrophobic protection"}},
+          {"@type":"Offer","itemOffered":{"@type":"Service","name":"Headlight Restoration","description":"Professional headlight clarity restoration with UV seal"}}
         ]
       },
-      "openingHoursSpecification": [
-        {
-          "@type": "OpeningHoursSpecification",
-          "dayOfWeek": ["Monday","Tuesday","Wednesday","Thursday","Friday"],
-          "opens": "08:00",
-          "closes": "19:00"
-        },
-        {
-          "@type": "OpeningHoursSpecification",
-          "dayOfWeek": "Saturday",
-          "opens": "09:00",
-          "closes": "17:00"
-        }
+      "openingHoursSpecification":[
+        {"@type":"OpeningHoursSpecification","dayOfWeek":["Monday","Tuesday","Wednesday","Thursday","Friday"],"opens":"08:00","closes":"19:00"},
+        {"@type":"OpeningHoursSpecification","dayOfWeek":"Saturday","opens":"09:00","closes":"17:00"}
       ],
-      "sameAs": [
-        "https://www.instagram.com/leather_repair_service2222",
-        "https://www.facebook.com/profile.php?id=61572483165003"
+      "sameAs":[
+        "https://www.instagram.com/", 
+        "https://www.facebook.com/"
       ]
     }
     </script>
+
+    <!-- Structured Data: FAQ -->
     <script type="application/ld+json">
     {
-      "@context": "https://schema.org",
-      "@type": "FAQPage",
-      "mainEntity": [
-        {
-          "@type": "Question",
-          "name": "Do you offer mobile paint correction service?",
-          "acceptedAnswer": {
-            "@type": "Answer",
-            "text": "Yes, we are a fully mobile service. We come directly to your location in Bucks County, Philadelphia, and New Jersey, whether at your home driveway or garage."
-          }
-        },
-        {
-          "@type": "Question",
-          "name": "How long does paint correction take?",
-          "acceptedAnswer": {
-            "@type": "Answer",
-            "text": "The duration depends on the vehicle size and condition. A standard paint correction typically takes 4-8 hours, while multi-stage correction can take up to 12 hours or more for optimal results."
-          }
-        },
-        {
-          "@type": "Question",
-          "name": "What areas do you serve?",
-          "acceptedAnswer": {
-            "@type": "Answer",
-            "text": "We serve Bucks County, Philadelphia, and New Jersey. Our base is in Doylestown, PA 18901, and we travel throughout the region to provide mobile paint restoration services."
-          }
-        },
-        {
-          "@type": "Question",
-          "name": "What should I prepare before your arrival?",
-          "acceptedAnswer": {
-            "@type": "Answer",
-            "text": "Please ensure your vehicle is accessible and ideally parked in a shaded area or garage. We recommend having the vehicle pre-washed, though we can handle this if needed. Access to electrical outlets is required for our equipment."
-          }
-        },
-        {
-          "@type": "Question",
-          "name": "Do you offer guarantees on your work?",
-          "acceptedAnswer": {
-            "@type": "Answer",
-            "text": "Yes, we guarantee our workmanship and use only premium materials for lasting results. Our ceramic coatings come with manufacturer warranties ranging from 1-5 years depending on the product selected."
-          }
-        },
-        {
-          "@type": "Question",
-          "name": "What forms of payment do you accept?",
-          "acceptedAnswer": {
-            "@type": "Answer",
-            "text": "We accept cash, all major credit cards, and digital payment methods. Payment is due upon completion of service."
-          }
-        }
+      "@context":"https://schema.org",
+      "@type":"FAQPage",
+      "mainEntity":[
+        {"@type":"Question","name":"Do you offer mobile paint correction service?","acceptedAnswer":{"@type":"Answer","text":"Yes, we are a fully mobile service. We come directly to your location in Bucks County, Philadelphia, and New Jersey."}},
+        {"@type":"Question","name":"How long does paint correction take?","acceptedAnswer":{"@type":"Answer","text":"Standard jobs take 4–8 hours; multi-stage correction can take up to 12 hours or more."}},
+        {"@type":"Question","name":"What areas do you serve?","acceptedAnswer":{"@type":"Answer","text":"Bucks County, Philadelphia, and New Jersey (base: Doylestown, PA 18901)."}},
+        {"@type":"Question","name":"What should I prepare before your arrival?","acceptedAnswer":{"@type":"Answer","text":"Ensure driveway/garage access and power outlet. Pre-wash is helpful but optional."}},
+        {"@type":"Question","name":"Do you offer guarantees?","acceptedAnswer":{"@type":"Answer","text":"We guarantee workmanship and use premium materials. Ceramic coatings include 1–5 year manufacturer warranties."}},
+        {"@type":"Question","name":"What forms of payment do you accept?","acceptedAnswer":{"@type":"Answer","text":"Cash, major cards, and digital payments. Payment due upon completion."}}
       ]
     }
     </script>
   </head>
-
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
