--- a/index.html
+++ b/index.html
@@ -8,25 +8,28 @@
     <title>Paint Correction & Scratch Removal in Bucks County, Philadelphia & NJ | The Scratch Lab</title>
     <meta name="description" content="Mobile paint correction & scratch removal. We come to you in Bucks County, Philadelphia & New Jersey. Call 267-379-3167." />
     <meta name="keywords" content="paint correction Bucks County, scratch removal Philadelphia, automotive detailing New Jersey, mobile paint restoration, ceramic coating Doylestown, headlight restoration PA" />
+    <link rel="canonical" href="https://scratchlab.org/" />
 
     <!-- Open Graph -->
     <meta property="og:type" content="website" />
+    <meta property="og:site_name" content="The Scratch Lab" />
     <meta property="og:title" content="The Scratch Lab — Mobile Paint Correction & Scratch Removal" />
     <meta property="og:description" content="We come to you in Bucks County, Philadelphia & New Jersey. Fast estimates, premium materials." />
-    <meta property="og:image" content="/og.jpg" />
+    <meta property="og:image" content="https://scratchlab.org/og.jpg?v=2" />
     <meta property="og:url" content="https://scratchlab.org/" />
 
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="The Scratch Lab — Mobile Paint Correction & Scratch Removal" />
     <meta name="twitter:description" content="We come to you in Bucks County, Philadelphia & New Jersey. Fast estimates, premium materials." />
-    <meta name="twitter:image" content="/og.jpg" />
+    <meta name="twitter:image" content="https://scratchlab.org/og.jpg?v=2" />
 
     <!-- Theme color -->
     <meta name="theme-color" content="#0b1220" />
 
     <!-- Icons / Favicon -->
-    <link rel="icon" href="/favicon.ico" />
+    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/img/logo.png" />
     <link rel="icon" type="image/png" sizes="192x192" href="/img/logo.png" />
     <link rel="apple-touch-icon" sizes="180x180" href="/img/logo.png" />
     <link rel="manifest" href="/site.webmanifest" />
@@ -47,7 +50,7 @@
       "telephone":"+1-267-379-3167",
       "email":"info@scratchlab.org",
       "priceRange":"$$",
-      "url":"https://scratchlab.org",
+      "url":"https://scratchlab.org/",
       "address":{
         "@type":"PostalAddress",
         "streetAddress":"9-4 Aspen Way",
@@ -76,7 +79,7 @@
         {"@type":"OpeningHoursSpecification","dayOfWeek":"Saturday","opens":"09:00","closes":"17:00"}
       ],
       "sameAs":[
-        "https://www.instagram.com/", 
+        "https://www.instagram.com/",
         "https://www.facebook.com/"
       ]
     }
@@ -93,7 +96,7 @@
         {"@type":"Question","name":"What areas do you serve?","acceptedAnswer":{"@type":"Answer","text":"Bucks County, Philadelphia, and New Jersey (base: Doylestown, PA 18901)."}},
         {"@type":"Question","name":"What should I prepare before your arrival?","acceptedAnswer":{"@type":"Answer","text":"Ensure driveway/garage access and power outlet. Pre-wash is helpful but optional."}},
         {"@type":"Question","name":"Do you offer guarantees?","acceptedAnswer":{"@type":"Answer","text":"We guarantee workmanship and use premium materials. Ceramic coatings include 1–5 year manufacturer warranties."}},
-        {"@type":"Question","name":"What forms of payment do you accept?","acceptedAnswer":{"@type":"Answer","text":"Cash, major cards, and digital payments. Payment due upon completion."}}
+        {"@type":"Question","name":"What forms of payment do you accept?","acceptedAnswer":{"@type":"Answer","text":"Cash, major cards, and digital payments. Payment is due upon completion."}}
       ]
     }
     </script>
