--- a/index.html
+++ b/index.html
@@ -8,28 +8,27 @@
     <title>Paint Correction & Scratch Removal in Bucks County, Philadelphia & NJ | The Scratch Lab</title>
     <meta name="description" content="Mobile paint correction & scratch removal. We come to you in Bucks County, Philadelphia & New Jersey. Call 267-379-3167." />
     <meta name="keywords" content="paint correction Bucks County, scratch removal Philadelphia, automotive detailing New Jersey, mobile paint restoration, ceramic coating Doylestown, headlight restoration PA" />
-    <link rel="canonical" href="https://scratchlab.org/" />
 
-    <!-- Open Graph -->
+    <!-- Open Graph (ABSOLUTE URLs + cache-buster) -->
     <meta property="og:type" content="website" />
-    <meta property="og:site_name" content="The Scratch Lab" />
     <meta property="og:title" content="The Scratch Lab — Mobile Paint Correction & Scratch Removal" />
     <meta property="og:description" content="We come to you in Bucks County, Philadelphia & New Jersey. Fast estimates, premium materials." />
-    <meta property="og:image" content="https://scratchlab.org/og.jpg?v=2" />
-    <meta property="og:url" content="https://scratchlab.org/" />
+    <meta property="og:image" content="https://thescratchlab.netlify.app/og.jpg?v=6" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+    <meta property="og:url" content="https://thescratchlab.netlify.app/" />
 
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="The Scratch Lab — Mobile Paint Correction & Scratch Removal" />
     <meta name="twitter:description" content="We come to you in Bucks County, Philadelphia & New Jersey. Fast estimates, premium materials." />
-    <meta name="twitter:image" content="https://scratchlab.org/og.jpg?v=2" />
+    <meta name="twitter:image" content="https://thescratchlab.netlify.app/og.jpg?v=6" />
 
     <!-- Theme color -->
     <meta name="theme-color" content="#0b1220" />
 
     <!-- Icons / Favicon -->
-    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
-    <link rel="icon" type="image/png" sizes="32x32" href="/img/logo.png" />
+    <link rel="icon" href="/favicon.ico" />
     <link rel="icon" type="image/png" sizes="192x192" href="/img/logo.png" />
     <link rel="apple-touch-icon" sizes="180x180" href="/img/logo.png" />
     <link rel="manifest" href="/site.webmanifest" />
@@ -39,53 +38,23 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet" />
 
-    <!-- Structured Data: LocalBusiness -->
+    <!-- JSON-LD (LocalBusiness + FAQ) — можно оставить твои прошлые -->
     <script type="application/ld+json">
     {
       "@context":"https://schema.org",
       "@type":"AutoBodyShop",
       "name":"The Scratch Lab",
       "description":"Mobile paint correction and scratch removal service serving Bucks County, Philadelphia, and New Jersey",
-      "image":"https://scratchlab.org/og.jpg",
+      "image":"https://thescratchlab.netlify.app/og.jpg?v=6",
       "telephone":"+1-267-379-3167",
-      "email":"info@scratchlab.org",
+      "email":"info@leatherclinic.org",
       "priceRange":"$$",
-      "url":"https://scratchlab.org/",
-      "address":{
-        "@type":"PostalAddress",
-        "streetAddress":"9-4 Aspen Way",
-        "addressLocality":"Doylestown",
-        "addressRegion":"PA",
-        "postalCode":"18901",
-        "addressCountry":"US"
-      },
-      "areaServed":[
-        {"@type":"City","name":"Philadelphia"},
-        {"@type":"AdministrativeArea","name":"Bucks County"},
-        {"@type":"State","name":"New Jersey"}
-      ],
-      "hasOfferCatalog":{
-        "@type":"OfferCatalog",
-        "name":"Auto Paint Restoration Services",
-        "itemListElement":[
-          {"@type":"Offer","itemOffered":{"@type":"Service","name":"Paint Correction","description":"Multi-stage paint correction for deep gloss restoration"}},
-          {"@type":"Offer","itemOffered":{"@type":"Service","name":"Scratch Removal","description":"Professional car scratch removal and finish refinement"}},
-          {"@type":"Offer","itemOffered":{"@type":"Service","name":"Ceramic Coating","description":"Durable ceramic coating application with hydrophobic protection"}},
-          {"@type":"Offer","itemOffered":{"@type":"Service","name":"Headlight Restoration","description":"Professional headlight clarity restoration with UV seal"}}
-        ]
-      },
-      "openingHoursSpecification":[
-        {"@type":"OpeningHoursSpecification","dayOfWeek":["Monday","Tuesday","Wednesday","Thursday","Friday"],"opens":"08:00","closes":"19:00"},
-        {"@type":"OpeningHoursSpecification","dayOfWeek":"Saturday","opens":"09:00","closes":"17:00"}
-      ],
-      "sameAs":[
-        "https://www.instagram.com/",
-        "https://www.facebook.com/"
-      ]
+      "url":"https://thescratchlab.netlify.app",
+      "address":{"@type":"PostalAddress","streetAddress":"9-4 Aspen Way","addressLocality":"Doylestown","addressRegion":"PA","postalCode":"18901","addressCountry":"US"},
+      "areaServed":[{"@type":"City","name":"Philadelphia"},{"@type":"AdministrativeArea","name":"Bucks County"},{"@type":"State","name":"New Jersey"}]
     }
     </script>
 
-    <!-- Structured Data: FAQ -->
     <script type="application/ld+json">
     {
       "@context":"https://schema.org",
@@ -96,7 +65,7 @@
         {"@type":"Question","name":"What areas do you serve?","acceptedAnswer":{"@type":"Answer","text":"Bucks County, Philadelphia, and New Jersey (base: Doylestown, PA 18901)."}},
         {"@type":"Question","name":"What should I prepare before your arrival?","acceptedAnswer":{"@type":"Answer","text":"Ensure driveway/garage access and power outlet. Pre-wash is helpful but optional."}},
         {"@type":"Question","name":"Do you offer guarantees?","acceptedAnswer":{"@type":"Answer","text":"We guarantee workmanship and use premium materials. Ceramic coatings include 1–5 year manufacturer warranties."}},
-        {"@type":"Question","name":"What forms of payment do you accept?","acceptedAnswer":{"@type":"Answer","text":"Cash, major cards, and digital payments. Payment is due upon completion."}}
+        {"@type":"Question","name":"What forms of payment do you accept?","acceptedAnswer":{"@type":"Answer","text":"Cash, major cards, and digital payments. Payment due upon completion."}}
       ]
     }
     </script>
