--- a/index.html
+++ b/index.html
@@ -5,24 +5,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
 
     <!-- Primary SEO -->
-    <title>Paint Correction & Scratch Removal in Bucks County, Philadelphia & NJ | The Scratch Lab</title>
-    <meta name="description" content="Mobile paint correction & scratch removal. We come to you in Bucks County, Philadelphia & New Jersey. Call 267-379-3167." />
-    <meta name="keywords" content="paint correction Bucks County, scratch removal Philadelphia, automotive detailing New Jersey, mobile paint restoration, ceramic coating Doylestown, headlight restoration PA" />
+    <title>The Scratch Lab | Mobile Paint Correction & Scratch Removal</title>
+    <meta name="description" content="Mobile paint correction & scratch removal. We come to you in Bucks County & Philadelphia. Call 267-379-3167." />
+    <link rel="canonical" href="https://thescratchlab.netlify.app/" />
 
-    <!-- Open Graph (ABSOLUTE URLs + cache-buster) -->
+    <!-- Open Graph -->
+    <meta property="og:site_name" content="The Scratch Lab" />
     <meta property="og:type" content="website" />
     <meta property="og:title" content="The Scratch Lab — Mobile Paint Correction & Scratch Removal" />
-    <meta property="og:description" content="We come to you in Bucks County, Philadelphia & New Jersey. Fast estimates, premium materials." />
-    <meta property="og:image" content="https://thescratchlab.netlify.app/og.jpg?v=6" />
+    <meta property="og:description" content="We come to you in Bucks County & Philadelphia. Fast estimates, premium materials." />
+    <meta property="og:url" content="https://thescratchlab.netlify.app/" />
+    <meta property="og:image" content="https://thescratchlab.netlify.app/og-v2.jpg?v=2" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
-    <meta property="og:url" content="https://thescratchlab.netlify.app/" />
+    <meta property="og:image:type" content="image/jpeg" />
 
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="The Scratch Lab — Mobile Paint Correction & Scratch Removal" />
-    <meta name="twitter:description" content="We come to you in Bucks County, Philadelphia & New Jersey. Fast estimates, premium materials." />
-    <meta name="twitter:image" content="https://thescratchlab.netlify.app/og.jpg?v=6" />
+    <meta name="twitter:description" content="We come to you in Bucks County & Philadelphia. Fast estimates, premium materials." />
+    <meta name="twitter:image" content="https://thescratchlab.netlify.app/og-v2.jpg?v=2" />
 
     <!-- Theme color -->
     <meta name="theme-color" content="#0b1220" />
@@ -38,31 +40,56 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet" />
 
-    <!-- JSON-LD (LocalBusiness + FAQ) — можно оставить твои прошлые -->
+    <!-- Structured Data: LocalBusiness -->
     <script type="application/ld+json">
     {
       "@context":"https://schema.org",
       "@type":"AutoBodyShop",
       "name":"The Scratch Lab",
-      "description":"Mobile paint correction and scratch removal service serving Bucks County, Philadelphia, and New Jersey",
-      "image":"https://thescratchlab.netlify.app/og.jpg?v=6",
+      "description":"Mobile paint correction and scratch removal service serving Bucks County and Philadelphia",
+      "image":"https://thescratchlab.netlify.app/og-v2.jpg",
       "telephone":"+1-267-379-3167",
-      "email":"info@leatherclinic.org",
+      "email":"info@scratchlab.org",
       "priceRange":"$$",
-      "url":"https://thescratchlab.netlify.app",
-      "address":{"@type":"PostalAddress","streetAddress":"9-4 Aspen Way","addressLocality":"Doylestown","addressRegion":"PA","postalCode":"18901","addressCountry":"US"},
-      "areaServed":[{"@type":"City","name":"Philadelphia"},{"@type":"AdministrativeArea","name":"Bucks County"},{"@type":"State","name":"New Jersey"}]
+      "url":"https://thescratchlab.netlify.app/",
+      "address":{
+        "@type":"PostalAddress",
+        "streetAddress":"9-4 Aspen Way",
+        "addressLocality":"Doylestown",
+        "addressRegion":"PA",
+        "postalCode":"18901",
+        "addressCountry":"US"
+      },
+      "areaServed":[
+        {"@type":"AdministrativeArea","name":"Bucks County"},
+        {"@type":"City","name":"Philadelphia"}
+      ],
+      "hasOfferCatalog":{
+        "@type":"OfferCatalog",
+        "name":"Auto Paint Restoration Services",
+        "itemListElement":[
+          {"@type":"Offer","itemOffered":{"@type":"Service","name":"Paint Correction","description":"Multi-stage paint correction for deep gloss restoration"}},
+          {"@type":"Offer","itemOffered":{"@type":"Service","name":"Scratch Removal","description":"Professional car scratch removal and finish refinement"}},
+          {"@type":"Offer","itemOffered":{"@type":"Service","name":"Ceramic Coating","description":"Durable ceramic coating application with hydrophobic protection"}},
+          {"@type":"Offer","itemOffered":{"@type":"Service","name":"Headlight Restoration","description":"Professional headlight clarity restoration with UV seal"}}
+        ]
+      },
+      "openingHoursSpecification":[
+        {"@type":"OpeningHoursSpecification","dayOfWeek":["Monday","Tuesday","Wednesday","Thursday","Friday"],"opens":"08:00","closes":"19:00"},
+        {"@type":"OpeningHoursSpecification","dayOfWeek":"Saturday","opens":"09:00","closes":"17:00"}
+      ]
     }
     </script>
 
+    <!-- Structured Data: FAQ -->
     <script type="application/ld+json">
     {
       "@context":"https://schema.org",
       "@type":"FAQPage",
       "mainEntity":[
-        {"@type":"Question","name":"Do you offer mobile paint correction service?","acceptedAnswer":{"@type":"Answer","text":"Yes, we are a fully mobile service. We come directly to your location in Bucks County, Philadelphia, and New Jersey."}},
+        {"@type":"Question","name":"Do you offer mobile paint correction service?","acceptedAnswer":{"@type":"Answer","text":"Yes, we are a fully mobile service. We come directly to your location in Bucks County and Philadelphia."}},
         {"@type":"Question","name":"How long does paint correction take?","acceptedAnswer":{"@type":"Answer","text":"Standard jobs take 4–8 hours; multi-stage correction can take up to 12 hours or more."}},
-        {"@type":"Question","name":"What areas do you serve?","acceptedAnswer":{"@type":"Answer","text":"Bucks County, Philadelphia, and New Jersey (base: Doylestown, PA 18901)."}},
+        {"@type":"Question","name":"What areas do you serve?","acceptedAnswer":{"@type":"Answer","text":"Bucks County and Philadelphia (base: Doylestown, PA 18901)."}},
         {"@type":"Question","name":"What should I prepare before your arrival?","acceptedAnswer":{"@type":"Answer","text":"Ensure driveway/garage access and power outlet. Pre-wash is helpful but optional."}},
         {"@type":"Question","name":"Do you offer guarantees?","acceptedAnswer":{"@type":"Answer","text":"We guarantee workmanship and use premium materials. Ceramic coatings include 1–5 year manufacturer warranties."}},
         {"@type":"Question","name":"What forms of payment do you accept?","acceptedAnswer":{"@type":"Answer","text":"Cash, major cards, and digital payments. Payment due upon completion."}}
